<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:paddingRight="10dip"
    >
   <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    >
	    <TextView  
	     android:layout_width="80dip" 
	     android:layout_height="wrap_content" 
	     android:textSize="15dip"
	     android:textColor="@color/white"
	     android:gravity="right" 
	     android:text="@string/text_account"
	    />
    	<EditText  
    	 android:id="@+id/reg_account"
	     android:layout_width="fill_parent" 
	     android:layout_height="wrap_content" 
		 android:textSize="15dip"
	     android:singleLine="true"
	     android:maxLength="10"
	     android:digits="@string/reg_digits"
		 android:hint="@string/text_account_hint"
		 android:layout_weight="1.0"
	    />
    </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    >
	    <TextView  
	     android:layout_width="80dip" 
	     android:layout_height="wrap_content" 
	     android:textSize="15dip"
	     android:textColor="@color/white"
	     android:gravity="right"  
		 android:text="@string/text_password"
	    />
    	<EditText  
    	 android:id="@+id/reg_password"
	     android:layout_width="fill_parent" 
	     android:layout_height="wrap_content" 
	     android:textSize="15dip"
	     android:singleLine="true"
	     android:password="true"
	     android:maxLength="20"
	     android:digits="@string/reg_digits"
		 android:hint="@string/text_password_hint"
		 android:layout_weight="1.0"
	    />
    </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    >
	    <TextView  
	     android:layout_width="80dip" 
	     android:layout_height="wrap_content" 
	     android:textSize="15dip"
	     android:textColor="@color/white"
	     android:gravity="right" 
		 android:text="@string/text_confirm_password"
	    />
    	<EditText  
    	 android:id="@+id/reg_confirm_password"
	     android:layout_width="fill_parent" 
	     android:layout_height="wrap_content" 
	     android:textSize="15dip"
	     android:singleLine="true"
	     android:password="true"
	     android:maxLength="20"
	     android:digits="@string/reg_digits"
		 android:hint="@string/text_confirm_password_hint"
		 android:layout_weight="1.0"
	    />
    </LinearLayout>
</LinearLayout>
