<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="5dip"
    android:paddingLeft="8dip"
    android:paddingRight="8dip"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			>
			<ImageView android:id="@+id/role_detail_avatar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/role_avatar_bg"
				android:src="@drawable/avatar"
			/>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				>
				<TextView android:id="@+id/role_detail_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/yellow"
					android:textSize="15dip"
					android:singleLine="true"
					/>
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/white"
						android:textSize="13dip"
						android:text="@string/text_role_level_hint"
						/>
					 <TextView android:id="@+id/role_detail_level"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/yellow"
						android:textSize="13dip"
						android:text="Lv 1"
						/>
				</LinearLayout>
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/white"
						android:textSize="13dip"
						android:text="@string/text_role_camp_hint"
						/>
					 <TextView android:id="@+id/role_detail_camp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/yellow"
						android:textSize="13dip"
						/>
				</LinearLayout>
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/white"
						android:textSize="13dip"
						android:text="@string/text_role_job_hint"
						/>
					 <TextView android:id="@+id/role_detail_job"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/yellow"
						android:textSize="13dip"
						/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<ImageView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:background="@drawable/line_h"
			android:layout_marginTop="5dip"
			android:layout_marginRight="10dip"
		/>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="13dip"
				android:text="@string/text_role_points_hint"
				/>
			 <TextView android:id="@+id/role_detail_points"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="13dip"
				android:text="0"
				/>
			  <Button android:id="@+id/btn_points_reset"
			  	style="@style/btn"
			  	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			  	android:text="@string/btn_reset_poin"
			  	android:layout_marginLeft="15dip"
			  />
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="13dip"
				android:text="@string/text_role_power_hint"
				/>
			 <TextView android:id="@+id/role_detail_power"
				android:layout_width="25dip"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="13dip"
				android:text="0"
				/>
			  <ImageButton android:id="@+id/btn_add_power"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/btn_point_add"
				android:layout_marginLeft="10dip"
				/>	
			  <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:textColor="@color/gray"
				android:textSize="12dip"
				android:text="@string/text_role_power_tips"
				/>
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="13dip"
				android:text="@string/text_role_mind_hint"
				/>
			 <TextView android:id="@+id/role_detail_mind"
				android:layout_width="25dip"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="13dip"
				android:text="0"
				/>
			  <ImageButton	android:id="@+id/btn_add_mind"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/btn_point_add"
				android:layout_marginLeft="10dip"
				/>	
			  <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:textColor="@color/gray"
				android:textSize="12dip"
				android:text="@string/text_role_mind_tips"
				/>
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="13dip"
				android:text="@string/text_role_agile_hint"
				/>
			 <TextView android:id="@+id/role_detail_agile"
				android:layout_width="25dip"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="13dip"
				android:text="0"
				/>
			  <ImageButton	android:id="@+id/btn_add_agile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/btn_point_add"
				android:layout_marginLeft="10dip"
				/>	
			  <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:textColor="@color/gray"
				android:textSize="12dip"
				android:text="@string/text_role_agile_tips"
				/>
		</LinearLayout>
		<ImageView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:background="@drawable/line_h"
			android:layout_marginRight="10dip"
			android:layout_marginTop="5dip"
		/>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="13dip"
				android:text="@string/text_role_rest_energy_hint"
				/>
			 <TextView android:id="@+id/role_detail_energy"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="13dip"
				android:text="0"
				/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="center"
			android:background="@drawable/role_equip_fmale"
			android:layout_weight="1.0"
			>
	
	</LinearLayout>
</LinearLayout>
