<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip"
    >
    <ImageView android:id="@+id/skill_detail_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:background="@drawable/skill_ok"
	/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginLeft="10dip"
		>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textColor="@color/yellow"
			android:textSize="14dip" 
			android:text="霸气外露"
			/>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:textColor="@color/white"
				android:textSize="13dip" 
				android:text="@string/text_skill_level_hint"
				/>
			<TextView android:id="@+id/skill_detail_level"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="@color/yellow" 
				android:textSize="13dip"
				android:text="1/3" />
			<Button android:id="@+id/btn_skill_upgrade" 
				style="@style/btn"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/btn_upgrade" 
				android:layout_marginLeft="10dip" />
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:textColor="@color/white"
				android:textSize="13dip" 
				android:text="@string/text_skill_defense_hint"
				/>
			<TextView android:id="@+id/skill_detail_level"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="@color/yellow" 
				android:textSize="13dip"
				android:text="+30" />
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:textColor="@color/white"
				android:textSize="13dip" 
				android:text="@string/text_skill_hunt_hint"
				/>
			<TextView android:id="@+id/skill_detail_level"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="@color/yellow" 
				android:textSize="13dip"
				android:text="每秒造成50伤害，持续3秒" />
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:textColor="@color/white"
				android:textSize="13dip" 
				android:text="@string/text_skill_use_hint"
				/>
			<TextView android:id="@+id/skill_detail_level"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="@color/yellow" 
				android:textSize="13dip"
				android:text="被动技能，受到伤害时自动施放" />
		</LinearLayout>
	</LinearLayout>	
</LinearLayout>
