<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
   <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/dialog_title"
	    >
	    <ImageView  
	     android:layout_width="wrap_content" 
	     android:layout_height="wrap_content" 
	     android:layout_marginLeft="15dip"
	     android:layout_marginTop="10dip"
	     android:background="@drawable/dialog_icon"
	    />
    	<TextView  
    	 android:id="@+id/dialog_title"
	     android:layout_width="wrap_content" 
	     android:layout_height="wrap_content" 
	     android:textStyle="bold"
	     android:textSize="16dip"
	     android:layout_marginLeft="5dip"
	     android:layout_marginTop="5dip"
	     android:textColor="@color/white"
	     android:text="@string/app_name"
	    />
    </LinearLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" 
		android:background="@drawable/dialog_body"
		android:scrollbars="none">
	    <LinearLayout
	    	android:id="@+id/dialog_view"
	    	android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:paddingLeft="20dip"
		    android:paddingRight="20dip"
		   >
		   <TextView  
	    	 android:id="@+id/dialog_msg"
		     android:layout_width="fill_parent" 
		     android:layout_height="wrap_content" 
		     android:textSize="15dip"
		     android:textColor="@color/white"
		    />
		 </LinearLayout>   
	 </ScrollView> 
   <FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/dialog_bottom"
	    android:layout_alignParentBottom="true"
	    android:paddingLeft="3dip"
	    android:paddingRight="3dip"
	    >
	    <ImageView 
			android:layout_gravity="left|bottom"
			android:background="@drawable/dialog_arrow_left"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
		    />
    	<Button  
    		android:id="@+id/btn_cancel"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/btn_cancel"
		    style="@style/btn"
		    android:layout_gravity="left"
		    android:layout_marginLeft="20dip"
		   />
		 <TextView
		 	android:id="@+id/dialog_bottom_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:textColor="@color/yellow"
		    android:textSize="18dip"
		    android:layout_weight="1.0"
		   />
	    <Button  
	   		android:id="@+id/btn_ok"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/btn_ok"
		    style="@style/btn"
		    android:layout_gravity="right"
		    android:layout_marginRight="20dip"
		   />
		   <ImageView 
			android:layout_gravity="right|bottom"
			android:background="@drawable/dialog_arrow_right"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
		/>	   
    </FrameLayout> 
</LinearLayout>
